--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,12 +26,10 @@ dependencies:
 
   flutter_cache_manager: ^3.3.0
 
-#  palette_generator: 0.1.1
+  #  palette_generator: 0.1.1
 
-#  flutter_webview_plugin: ^0.4.0 out latest Flutter V2
-  flutter_webview_plugin:
-    git:
-      url: https://github.com/jiankian/flutter_webview_plugin
+  #  flutter_webview_plugin: ^0.4.0 out latest Flutter V2
+  flutter_webview_plugin: ^0.4.0
 
   webview_flutter: ^3.0.0
 
@@ -62,8 +60,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-      - assets/images/
-      - mock/
+    - assets/images/
+    - mock/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
